--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URL = mongodb+srv://abc:abc@123@ecommerce.x2y8e4n.mongodb.net/
+MONGO_URI = "mongodb+srv://xyz:xyz%40123@cluster0.axni4nn.mongodb.net/"
 TOKEN_SECRET = nextjsyoutube
 DOMAIN = http://localhost:3000
