--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 MONGO_URI = "mongodb+srv://xyz:xyz%40123@cluster0.axni4nn.mongodb.net/"
 TOKEN_SECRET = nextjsyoutube
 DOMAIN = http://localhost:3000
+
+NODEMAILER_PW = "wlhlchpxawouogih"
+NODEMAILER_EMAIL = "ravikantchauhan65@gmail.com"
